feat: Implement JSON file handler for processing events and clean CSV processing